--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.solvd</groupId>
-    <artifactId>solvd-laba-block-2-homework-6</artifactId>
+    <artifactId>solvd-laba-block-2-homework-7</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -14,9 +14,8 @@
         <mybatis.version>3.5.15</mybatis.version>
         <commons-io.version>2.15.0</commons-io.version>
         <commons-lang3.version>3.13.0</commons-lang3.version>
-        <jaxb-api.version>2.3.1</jaxb-api.version>
-        <jaxb-impl.version>3.0.0</jaxb-impl.version>
-        <xml-bind-api.version>3.0.0</xml-bind-api.version>
+        <jackson-databind.version>2.16.1</jackson-databind.version>
+        <jackson-core.version>2.16.1</jackson-core.version>
     </properties>
 
     <dependencies>
@@ -51,20 +50,14 @@
             <version>${mybatis.version}</version>
         </dependency>
         <dependency>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
-            <version>${jaxb-api.version}</version>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson-databind.version}</version>
         </dependency>
         <dependency>
-            <groupId>jakarta.xml.bind</groupId>
-            <artifactId>jakarta.xml.bind-api</artifactId>
-            <version>${xml-bind-api.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.sun.xml.bind</groupId>
-            <artifactId>jaxb-impl</artifactId>
-            <version>${jaxb-impl.version}</version>
-            <scope>runtime</scope>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson-core.version}</version>
         </dependency>
     </dependencies>
 
