--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
         <mybatis.version>3.5.15</mybatis.version>
         <commons-io.version>2.15.0</commons-io.version>
         <commons-lang3.version>3.13.0</commons-lang3.version>
+        <jaxb-api.version>2.3.1</jaxb-api.version>
+        <jaxb-impl.version>3.0.0</jaxb-impl.version>
+        <xml-bind-api.version>3.0.0</xml-bind-api.version>
         <jackson-databind.version>2.16.1</jackson-databind.version>
         <jackson-core.version>2.16.1</jackson-core.version>
     </properties>
@@ -48,6 +51,22 @@
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
             <version>${mybatis.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>${jaxb-api.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+            <version>${xml-bind-api.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>${jaxb-impl.version}</version>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
